# prompt

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  README.md  STRIPE_IMPLEMENTATION_SUMMARY.txt  TASK_6_STRIPE_INTEGRATION.md  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  turbo.json  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-web.yml  loadtest.yml  release.yml  staging-smoke.yml  test.yml
apps/desktop/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/discord-bot/: README.md  package.json
apps/discord-bot/src/: index.ts
apps/extension/: background.ts  make-icon.cjs  options.tsx  package.json  plasmo.json  popup.tsx  style.css  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/extension/contents/: index.ts  inject.ts  sites.ts
apps/vscode/: README.md  package.json  tsconfig.json
apps/vscode/src/: extension.ts
apps/web/: .env.example  instrumentation.ts  middleware.ts  next.config.js  package.json  playwright.config.ts  sentry.client.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/web/app/: global-error.tsx  (+4 more)
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MANUAL_QA.md  RELEASE.md  RUNBOOK.md  SECURITY.md  STAGING.md  openapi.yaml
loadtest/: README.md  checkout.k6.js  smoke.k6.js
tests/e2e/: desktop.spec.ts  extension.spec.ts  web.spec.ts
(+90 files in other folders)
