[package]
name = "promptforge"
version = "1.0.0"
description = "PromptForge - AI Prompt Optimizer Desktop App"
authors = ["PromptForge Team"]
license = "MIT"
repository = "https://github.com/promptforge/promptforge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["shell-open", "clipboard-write", "http-client"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
